fix: whitespace around button grid

--- a/webui/src/scss/_button-grid.scss
+++ b/webui/src/scss/_button-grid.scss
@@ -102,7 +102,7 @@
 
 .button-infinite-grid {
 	height: 100%;
-	max-height: 60vh;
+	max-height: 65vh;
 
 	background-color: #222;
 	// border-radius: 5px; // A radius here breaks safari, causing the div to draw over the scrollbars
